13-Monitoring/01-Create_Prometheus_Stack/src/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: local-gateway
  namespace: default
spec:
  selector:
    istio: local-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "my.home"
        - "*.filter.home"
