13-Monitoring/01-Create_Prometheus_Stack/src/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: default
  labels:
    app: grafana
spec:
  hosts:
    - "grafana.my.home"
  gateways:
    - default/local-gateway
  http:
    - route:
        - destination:
            host: prometheus-stack-01-grafana.observability.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: observability
  labels:
    app: prometheus
spec:
  hosts:
    - "prometheus.my.home"
  gateways:
    - default/local-gateway
  http:
    - route:
        - destination:
            host: prometheus-stack-01-kube-p-prometheus.observability.svc.cluster.local
            port:
              number: 9090
